# findatalytix

./: .gitignore  LICENSE  README.md  README.tr.md  SECURITY.md  app.js  config.js  core.js  index.html  render.yaml  styles.css  update_config.py  update_dyn.py  update_dyn2.py  update_dyn3.py  update_final.py  update_html.py  update_titles.py
backend/: .env.example  ai.py  analysis.py  history.py  main.py  market.py  news.py  rag.py  report.py  requirements.txt  settings.py  storage.py  watchlist.py
backend/tests/: conftest.py  test_agent.py  test_ai_lang.py  test_bakim_11tem.py  test_chunk_setting.py  test_crypto_resolve.py  test_engine.py  test_files.py  test_news.py  test_rag.py  test_report_lang.py  test_reports.py  test_security.py  test_security_hardening.py  test_simulate.py  test_watchlist_stale.py
docs/: baglanti-haritasi.md
engine/: pyproject.toml
engine/src/findatalytix_engine/: __init__.py  simulation.py
